--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation ('org.apache.httpcomponents:httpmime:4.5.5'){
-        exclude module: "httpclient"
-    }
-    implementation ('org.apache.httpcomponents:httpcore:4.4.9'){
-        exclude module: "httpclient"
-    }
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
