--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.project.disease"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 27
     }
 
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
